# Qt

./: README.md
ColorAdjust/: CMakeLists.txt  ColorAdjust.pro  ui_widget.h  widget.cpp  widget.h  widget.ui
ColorAdjust-build/: Adjust.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
ColorThresholdAdjust/: widget.cpp  widget.h
Error in " Util.asciify("build-ColorAdjust-Desktop-Debug")": TypeError: Property 'asciify' of object Core::Internal::UtilsJsExtension(0x1936200) is not a function/: Makefile  ui_widget.h
Rubik'sCubeDebug/: CMakeLists.txt
RubikCubeDebug/: RubikCubeDebug.pro
RubikCubeDebug2/qt/: CMakeLists.txt  main.cpp  qt.pro  widget.cpp  widget.h
RubiksCubeDebug2-0/: CMakeLists.txt  RubiksCubeDebug2-0.pro  ui_widget.h  widget.cpp  widget.h  widget.ui
RubiksCubeDebug2-0-build/: CMakeCache.txt  Makefile  RubikCubeDebug.cbp  cmake_install.cmake
calculator/: calculator.cpp  calculator.h  calculator.pro  calculator.pro.user.c92a61f  calculator.pro.user.dedbba0
calculator1.0/: CMakeLists.txt  button.cpp  button.h  calculator.cpp  calculator.h  main.cpp
qt_in_clion_test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
qt_slot_example/: CMakeLists.txt  CMakeLists.txt.user.9851bf2  form.cpp  form.h  form.ui  main.cpp  panel.cpp  panel.h  panel.ui
qt_slot_example-build/: CMakeCache.txt  Makefile  cmake_install.cmake  helloQt.cbp  helloQt_automoc.cpp  moc_form.cpp  moc_panel.cpp  ui_panel.h
widget_in_clion/: CMakeLists.txt  main.cpp  panel.cpp  ui_panel.h  ui_widget.h  widget.h  widget.pro  widget.ui  widget.ui.autosave
